# searchagram

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt
cmake/Modules/: BuildJsonCpp.cmake  BuildLibb64.cmake  BuildSQLite3.cmake  BuildSoci.cmake  BuildUri.cmake  FindSQLite3.cmake
cmake/Modules/BuildSQLite3/: create-fossil-manifest
config/: searchagram.xml  searchagram.xml.default
src/: CMakeLists.txt  config.cxx  config.h  data_source.cxx  data_source.h  index_manager.cxx  index_manager.h  indexer.cxx  indexer.h  instagram_comment.h  instagram_image.h  instagram_like.h  instagram_user.h  matcher.cxx  matcher.h  matcher_service.cxx  matcher_service.h  matcher_service_connection.cxx  matcher_service_connection.h  next_data_source.cxx  next_data_source.h
src/analysis/: color_coherence_vector.cxx  color_coherence_vector.h  edge_direction_histogram.cxx  edge_direction_histogram.h  luv_histogram.cxx  luv_histogram.h  rgb_histogram.cxx  rgb_histogram.h  surf_vector.cxx  surf_vector.h
src/lsh/: cosine_hasher.cxx  cosine_hasher.h  hasher.h  lsh.cxx  lsh.h
web/: app.js  config.js  package.json
web/public/: index.html  results.html
web/public/assets/: bottom.xcf  footer.xcf
web/public/css/: searchagram.css
web/public/js/: adjust-height.js  advanced-search.js  autocomplete.js  image-upload.js  results.js  search.js
web/routes/: index.js
web/views/: index.jade  results.jade
